// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetUsersHandler execute should return a paged list of users: {"search":"Tom"} 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-03-03T09:30:14.640Z,
      "createdBy": null,
      "email": "tom.debuyser@gmail.com",
      "id": "e810ee33-6cd3-41dd-8755-6abba3bb9efa",
      "isActive": true,
      "name": "Tom De Buyser",
      "updatedAt": 2020-03-03T09:30:18.095Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: {"search":"WLTC2"} 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-03-03T09:30:32.473Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc2@tapapp.be",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "isActive": true,
      "name": "User 2",
      "updatedAt": 2020-03-03T09:30:36.284Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: {"search":"wltc1"} 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-03-03T09:30:24.076Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc1@tapapp.be",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "isActive": true,
      "name": "User 1",
      "updatedAt": 2020-03-03T09:30:27.518Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: {"skip":2,"take":2} 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-03-03T09:30:41.190Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc3@tapapp.be",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "isActive": true,
      "name": "User 3",
      "updatedAt": 2020-03-03T09:30:44.265Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:32.473Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc2@tapapp.be",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "isActive": true,
      "name": "User 2",
      "updatedAt": 2020-03-03T09:30:36.284Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
  ],
  "meta": Object {
    "count": 2,
    "skip": 2,
    "totalCount": 6,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: {"sortBy":"createdAt","sortDirection":"ASC"} 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-03-03T09:30:14.640Z,
      "createdBy": null,
      "email": "tom.debuyser@gmail.com",
      "id": "e810ee33-6cd3-41dd-8755-6abba3bb9efa",
      "isActive": true,
      "name": "Tom De Buyser",
      "updatedAt": 2020-03-03T09:30:18.095Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-03-03T09:30:24.076Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc1@tapapp.be",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "isActive": true,
      "name": "User 1",
      "updatedAt": 2020-03-03T09:30:27.518Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:32.473Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc2@tapapp.be",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "isActive": true,
      "name": "User 2",
      "updatedAt": 2020-03-03T09:30:36.284Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:41.190Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc3@tapapp.be",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "isActive": true,
      "name": "User 3",
      "updatedAt": 2020-03-03T09:30:44.265Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:49.457Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc4@tapapp.be",
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "isActive": true,
      "name": "User 4",
      "updatedAt": 2020-03-03T09:30:52.420Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:56.536Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc5@tapapp.be",
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "isActive": false,
      "name": "User 5",
      "updatedAt": 2020-03-03T09:31:00.109Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
  ],
  "meta": Object {
    "count": 6,
    "skip": 0,
    "totalCount": 6,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: {} 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-03-03T09:30:56.536Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc5@tapapp.be",
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "isActive": false,
      "name": "User 5",
      "updatedAt": 2020-03-03T09:31:00.109Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:49.457Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc4@tapapp.be",
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "isActive": true,
      "name": "User 4",
      "updatedAt": 2020-03-03T09:30:52.420Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:41.190Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc3@tapapp.be",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "isActive": true,
      "name": "User 3",
      "updatedAt": 2020-03-03T09:30:44.265Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:32.473Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc2@tapapp.be",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "isActive": true,
      "name": "User 2",
      "updatedAt": 2020-03-03T09:30:36.284Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:24.076Z,
      "createdBy": "tom.debuyser@gmail.com",
      "email": "wltc1@tapapp.be",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "isActive": true,
      "name": "User 1",
      "updatedAt": 2020-03-03T09:30:27.518Z,
      "updatedBy": "tom.debuyser@gmail.com",
    },
    User {
      "createdAt": 2020-03-03T09:30:14.640Z,
      "createdBy": null,
      "email": "tom.debuyser@gmail.com",
      "id": "e810ee33-6cd3-41dd-8755-6abba3bb9efa",
      "isActive": true,
      "name": "Tom De Buyser",
      "updatedAt": 2020-03-03T09:30:18.095Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 6,
    "skip": 0,
    "totalCount": 6,
  },
}
`;

exports[`GetUsersHandler execute should return an empty list if no users found 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;
